<resources>
    <string name="app_name">PROG7313 KTP Budgeting App</string>
    <string name="welcome_to_budget_tracker">Welcome to budget tracker</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account click_here</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="register2">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="enter_the_name_of_thecategory">Enter the name of thecategory</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_your_minimum_goal">Enter your minimum goal</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_your_maximum_goal">Enter your maximum goal</string>
    <string name="add_photo">Add photo</string>
    <string name="save_expense">SAVE EXPENSE</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_your_min_and_max_monthly_goals">Enter your min and max Monthly goals</string>
    <string name="enter_a_new_expense_here">Enter a new Expense here</string>
    <string name="save_goal">SAVE GOAL</string>
    <string name="expenses">Expenses</string>
    <string name="welcome_to_ktp_budgeting">Welcome to KTP Budgeting</string>
    <string name="logout">Logout</string>
    <string name="choose_an_option_to_continue">Choose an option to continue</string>
    <string name="reports">Reports</string>
    <string name="welcome_user">Welcome User</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="enter_a_ending_date">Enter a ending date</string>
    <string name="filter_expenses">Filter expenses</string>
    <string name="enter_a_starting_date">Enter a starting date</string>
    <string name="total_r0_00">total R0 00</string>
    <string name="status_below_min">Status: Below Minimum Goal</string>
    <string name="status_within_range">Status: Within Target Range</string>
    <string name="status_above_max">Status: Above Maximum Goal</string>
    <string name="status_no_goals">Status: No goals set</string>
    <string name="actual_spending">Actual Spending</string>
    <string name="min_goal_label">Min Goal</string>
    <string name="max_goal_label">Max Goal</string>
    <string name="rewards">Rewards</string>
    <string name="your_progress">Your Progress</string>
    <string name="earn_badges_by_completing_financial_goals">Earn badges by completing financial goals</string>
    <string name="medal">🏅</string>
    <string name="locked_budget_master">🔒 Locked - Budget Master</string>
    <string name="_0">0%</string>
    <string name="badge2">🏅</string>
    <string name="locked_savings_star">🔒 Locked - Savings Star</string>
    <string name="__0">0%</string>
    <string name="expense_icon">📊</string>
    <string name="locked_expense_tracker">🔒 Locked - Expense Tracker</string>
    <string name="___0">0%</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="Support">Support</string>
    <string name="home">Home</string>
    <string name="select_a_question_above_to_see_an_answer">SELECT QUESTION</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="select_a_question">SELECT QUESTION</string>
    <string name="todo">TODO</string>
    <string name="expensebtn">TODO</string>
    <string name="expensesB">TODO</string>
    <string name="reprotsB">TODO</string>
    <string name="Rewards">TODO</string>
    <string name="Help">TODO</string>
    <string name="support">TODO</string>
    <string name="goal_status_loading">Goal Status: Loading...</string>
    <string name="spending_vs_goals">Spending vs Goals</string>
    <string name="category_breakdown">Category Breakdown</string>
    <string name="chatbot_send">Send</string>
    <string name="bot_greeting">Hello! How can I help you today?</string>
    <string name="bot_message">Bot message</string>
    <string name="user_message">User message</string>
    <string name="records">Records</string>
    <string name="expense_records">Expense Records</string>
    <string name="todo2">TODO</string>
</resources>